--- a/FeedControl/index.html
+++ b/FeedControl/index.html
@@ -79,10 +79,7 @@
                         </li>
                         <li>
                             <a href="cidades.html">Cidades Atendidas</a>
-                        </li>
-                        <li>
-                            <a href="#">Produtos</a>
-                        </li>
+                        </li>                      
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -150,7 +147,7 @@
                             <div class="thumbnail">
                                 <img src="img/cao_adulto.jpg" alt="">
                                 <div class="caption">           
-                                    <h4><a href="adultoGeral.html">Alimentos para Cães Adultos</a>
+                                    <h4><a href="adultoGeral.html">Alimentos para Cães <br> Adultos</a>
                                     </h4>
                                     <p>Ração para cães adultos</div>
 
@@ -161,7 +158,8 @@
                             <div class="thumbnail">
                                 <img src="img/cao_filhote.jpg" alt="">
                                 <div class="caption">                              
-                                    <h4><a href="filhoteGeral.html">Alimentos para Cães Filhotes</a>
+                                    <h4><a href="filhoteGeral.html">Alimentos para Cães 
+                                            <br>Filhotes</a>
                                     </h4>
                                     <p>Ração para cães filhotes</p>
                                 </div>                            
@@ -172,7 +170,7 @@
                             <div class="thumbnail">
                                 <img src="img/cao_senior.jpg" alt="">
                                 <div class="caption">                              
-                                    <h4><a href="seniorGeral.html">Alimentos para Cães Senior</a>
+                                    <h4><a href="seniorGeral.html">Alimentos para Cães<br> Senior</a>
                                     </h4>
                                     <p>Ração para cães senior</p>
                                 </div>                            
@@ -183,7 +181,7 @@
                             <div class="thumbnail">
                                 <img src="img/gato_adulto.jpg" alt="">
                                 <div class="caption">                              
-                                    <h4><a href="gatosGuabi.html">Alimentos para Gatos Adultos</a>
+                                    <h4><a href="gatosGuabi.html">Alimentos para Gatos <br>Adultos</a>
                                     </h4>
                                     <p>Ração para gatos adultos</p>
                                 </div>                            
@@ -194,7 +192,7 @@
                             <div class="thumbnail">
                                 <img src="img/gato_filhote.jpg" alt="">
                                 <div class="caption">                              
-                                    <h4><a href="gatosGuabi.html">Alimentos para Gatos Filhotes</a>
+                                    <h4><a href="gatosGuabi.html">Alimentos para Gatos <br>Filhotes</a>
                                     </h4>
                                     <p>Ração para gatos filhotes</p>
                                 </div>                            
@@ -205,7 +203,7 @@
                             <div class="thumbnail">
                                 <img src="img/gato_senior.jpg" alt="">
                                 <div class="caption">                              
-                                    <h4><a href="gatosGuabi.html">Alimentos para Gatos Senior</a>
+                                    <h4><a href="gatosGuabi.html">Alimentos para Gatos<br> Senior</a>
                                     </h4>
                                     <p>Ração para gatos senior</p>
                                 </div>                            
