--- a/FeedControl/seniorGeral.html
+++ b/FeedControl/seniorGeral.html
@@ -121,7 +121,17 @@
                             <img src="img/seniorgran.png" alt="">
                         </div>                      
                     </div>
-                </div>                   
+                </div>
+                <div class="col-sm-6 col-lg-6 col-md-6">
+                    <div class="thumbnail" style="border: 0;">
+
+                        <p class="titulosaborVidaF">SABOR E VIDA</p>
+                        <p class="subtitulosaborVidaF"><b>CÃES SÊNIOR</b></p>                       
+                        <div class="racao">
+                            <img src="img/seniorSabor&Vida.png" alt="">
+                        </div>                      
+                    </div>
+                </div>   
             </div>
 
         </div>
